--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,34 @@
     transform: rotate(360deg);
   }
 }
+
+.theImg{
+  width: 100%;
+}
+
+.theImg{
+  width: 100%;
+}
+
+.test{
+  position:absolute;
+  border: 1px rgb(255, 0, 64) double;
+  background-color: rgba(127, 178, 255, 0.219);
+}
+
+
+
+.pictureContainer{
+  position:absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.resultat_finale{
+  padding: 2em;
+}
+
+.text-center {
+  text-align: center;
+}
